repaired some variables bugs * removed redundant boxing of boolean (conversion from string) in AllocationTagHandler * rename one of the variables due to code convention in ResourceTagHandler * changed wrong usage of Integer in GanttXMLOpen * created local variables for duplicate names in GanttXMLOpen * moved the array designator from the variable to the type (char buf[] to char[] buf) in XmlParser * changed new BigDecimal to BigDecimal.valueOf in HumanResource * replaced Map.get() and condition with a call to Map.computeIfAbsent() and change for type in LoadDistribution